Migrate to Spring Boot 3